--- a/assets/css/photizo.css
+++ b/assets/css/photizo.css
@@ -11,7 +11,7 @@ body {
     display: flex;
     height: 100vh;
     font-family: 'Roboto', sans-serif;
-    color:rgb(16, 7, 77);
+    color: #053575;
 }
 
 section.flex-container {
@@ -54,9 +54,9 @@ input {
     margin-top: 0.5rem;
     margin-bottom: 1.3rem;
     display: block;
-    border: 1px solid gray;
+    border: 1.2px solid #c1c1c1;
     outline: none;
-    padding: 1rem;
+    padding: 1.4rem;
     /* box-shadow: 0 0 8px 0 rgb(16, 7, 77); */
     border-radius: 0.2rem;
     font-size: 1.5rem;
@@ -65,28 +65,28 @@ input {
 button {
     background: #053575;
     width: 100%;
-    height: 2.5rem;
+    height: 3rem;
     line-height: 2.5rem;
     display: block;
     cursor: pointer;
     border: none;
     border-radius: 0.2rem;
-    font-size: 1.5rem;
-    color: #FFF;
-    margin: 1.3rem 0 !important;
+    font-size: 1.7rem;
+    color: #ffffff;
+    margin: 2rem 0 !important;
 }
 
 button:hover {
     background: #ffffff;
     transition: background .8s ease-in-out;
     -webkit-transition: background .8s ease-in-out;
-    color: rgb(0, 0, 0);
+    color: #000000;
     line-height: 2.5rem;
 }
 
 a {
     text-decoration: none;
-    color: rgb(255, 0, 0);
+    color: #ff0000;
 }
 
 .items-02 {
@@ -114,7 +114,7 @@ span {
 
 h1 span{
     color:#ffffff;
-    font-weight:normal;
+    font-weight:2rem;
     text-align:center;
     width: 300px;
     border: none;
