--- a/photizo.css
+++ b/photizo.css
@@ -1,17 +1,16 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
-
 *,
 html {
     padding: 0;
     margin: 0;
-    box-sizing: border-box;   
+    box-sizing: border-box;
 }
 
 body {
     display: flex;
     height: 100vh;
     font-family: 'Roboto', sans-serif;
-    color:rgb(16, 7, 77);
+    color: rgb(16, 7, 77);
 }
 
 section.flex-container {
@@ -29,7 +28,7 @@ section.flex-container {
 
 .items-01 {
     display: flex;
-    background: #fdfdfd;  
+    background: #fdfdfd;
 }
 
 .form-container {
@@ -50,15 +49,14 @@ form {
 
 input {
     width: 100%;
-    height: 2.5rem;
-    margin-top: 0.5rem;
-    margin-bottom: 1.3rem;
+    margin-top: 6px;
+    margin-bottom: 16px;
     display: block;
-    border: 1px solid gray;
+    border: 1px solid #ccc;
     outline: none;
-    padding: 1rem;
+    padding: 12px;
     /* box-shadow: 0 0 8px 0 rgb(16, 7, 77); */
-    border-radius: 0.2rem;
+    border-radius: 2px;
     font-size: 1.5rem;
 }
 
@@ -94,7 +92,7 @@ a {
     flex-flow: column wrap;
     justify-content: center;
     padding: 3rem;
-    background:#053575 center no-repeat;
+    background: #203060 center no-repeat;
     font-size: 1.5rem;
 }
 
@@ -112,32 +110,32 @@ span {
     padding: 6px 4% 6px 4%;
 }
 
-h1 span{
-    color:#ffffff;
-    font-weight:normal;
-    text-align:center;
+h1 span {
+    color: #ffffff;
+    font-weight: normal;
+    text-align: center;
     width: 300px;
     border: none;
 }
 
-h2 span{
-    color:#ffffff;
-    font-weight:normal;
-    text-align:center;
+h2 span {
+    color: #ffffff;
+    font-weight: normal;
+    text-align: center;
     width: 300px;
 }
 
-.tagline{
+.tagline {
     font-size: 15px;
-    font-weight:normal;
+    font-weight: normal;
     margin-left: 14%;
     margin-top: -50px;
-    color:#ffffff;
-    text-align:center;
+    color: #ffffff;
+    text-align: center;
     padding: 0.2rem;
 }
 
-::-webkit-input-placeholder{
+::-webkit-input-placeholder {
     color: #c1c1c1;
     font-size: 18px;
 }
@@ -155,6 +153,7 @@ h2 span{
     background-color: #ffffff;
     padding: 1rem;
 }
+
 
 /* MOBILE RESPONSIVENESS */
 
